# Vehicle-central-control-management-system

./: .gitignore  CMakeLists.txt  README.md  car_ai.conf
.cache/clangd/index/: CarData.hpp.0C8B5C91104EE3A8.idx  CarData.hpp.7CBA97B8417AA6FC.idx  Car_Log.cpp.07420530524414FD.idx  Car_Log.cpp.ED64D7B35909671A.idx  Car_Log.hpp.36B7748EFF0D8F4B.idx  Car_Log.hpp.FDCF2CDD485D5C85.idx  ConfigManager.cpp.2FF3F299BF5BC4AA.idx  ConfigManager.cpp.4A5C74A27991D9B9.idx  ConfigManager.hpp.19C03129301EAA42.idx  ConfigManager.hpp.934BB16F9384D57B.idx  ModuleServer.hpp.4AF73C7253A6D1EB.idx  ModuleServer.hpp.97327A83EC2BEC6E.idx  air.cpp.13E29EBC91FCEAFB.idx  air.cpp.DB3481C89D28A79D.idx  car_ai.cpp.6A8C8B8BF4912749.idx  car_ctl.cpp.7316B9ECBB7E733A.idx  car_ctl.cpp.73EDC4371140EC96.idx  door.cpp.4010D1F7B0AE88AC.idx  door.cpp.780953867C2CF8A5.idx  fault.cpp.31560D99175E0594.idx  fault.cpp.4E31D9979E8AAB8D.idx  main.cpp.6622B08261F6EB99.idx  main.cpp.D7B9DB56EFF0FCDC.idx  status.cpp.45FE08705FC8885D.idx  status.cpp.966396FBBDEF4F7E.idx  test_CarData.cpp.680310A6AD609923.idx  test_CarData.cpp.B99AE331204142F1.idx
Testing/AI/: test_ai.sh
build_arm/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_AirModule[1]_include.cmake  test_CarDataExtended[1]_include.cmake  test_CarData[1]_include.cmake  test_ConfigManager[1]_include.cmake  test_DoorModule[1]_include.cmake  test_FaultModule[1]_include.cmake  test_Logger[1]_include.cmake  test_StatusModule[1]_include.cmake
build_riscv/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_AirModule[1]_include.cmake  test_CarDataExtended[1]_include.cmake  test_CarData[1]_include.cmake  test_ConfigManager[1]_include.cmake  test_DoorModule[1]_include.cmake  test_FaultModule[1]_include.cmake  test_Logger[1]_include.cmake  test_StatusModule[1]_include.cmake
conf/: db.conf  init_db.sql  redis.conf
docs/superpowers/plans/: 2026-05-29-mysql-audit-redis.md
docs/superpowers/specs/: 2026-05-29-mysql-audit-redis-design.md
include/: AirModule.hpp  AsyncAuditLogger.hpp  CarData.hpp  Car_Log.hpp  DoorModule.hpp  FaultModule.hpp  ModuleServer.hpp  RedisManager.hpp  StatusModule.hpp
source/: AsyncAuditLogger.cpp  Car_Log.cpp  ConfigManager.cpp  RedisManager.cpp  main.cpp
source/client/: car_ai.cpp  car_ctl.cpp
source/server/modules/: air.cpp  door.cpp  fault.cpp  status.cpp
tests/: test_AirModule.cpp  test_AsyncAuditLogger.cpp  test_CarData.cpp  test_CarDataExtended.cpp  test_ConfigManager.cpp  test_DoorModule.cpp  test_FaultModule.cpp  test_Logger.cpp  test_RedisManager.cpp  test_StatusModule.cpp
